Fix caption text overflowing screen horizontally on mobile when long words are used

--- a/packages/slate-renderer/src/elements/Image/Image.scss
+++ b/packages/slate-renderer/src/elements/Image/Image.scss
@@ -56,6 +56,7 @@
             font-style: italic;
             font-size: $font-size-s;
             text-align: center;
+            word-break: break-all;
 
             &:empty {
                 display: none;
